Archive2/e5/72df2bc1a80cef/output
main.cpp:10:5: error: control reaches end of non-void block
    };
    ^
1 error generated.
