Archive2/e5/72df2bc1a80cef/main.cpp
int main(int argc, const char * argv[])
{
    id (^iReturnStuff)() = ^id() {
        @try{} @catch(...){}
    };
    (void)iReturnStuff;
    
    id (^iReturnStuff2)() = ^id() {
        try{} catch(...){}
    };
    (void)iReturnStuff2;
    return 0;
}